# tropa-relay

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  init-plan.md
.github/workflows/: release.yml
assets/: icon_32.rgba  icon_48.rgba
docs/: gui-design-reference.md
installer/: tropa-relay.nsi
src/: autostart.rs  config.rs  gui.rs  main.rs  relay.rs
