[package]
name = "tropa-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "signal"] }
fast-socks5 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }

[patch.crates-io]
winit = { path = "patches/winit-0.30.12" }
